--- a/timeCapsule/Base.lproj/Main.storyboard
+++ b/timeCapsule/Base.lproj/Main.storyboard
@@ -317,7 +317,7 @@
                                 </items>
                             </toolbar>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="ROd-Sm-RbI">
-                                <rect key="frame" x="0.0" y="83.562248995984191" width="375" height="646"/>
+                                <rect key="frame" x="0.0" y="83" width="375" height="646"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Y4P-RG-Dmn">
@@ -369,11 +369,44 @@
                     </view>
                     <connections>
                         <outlet property="reminderView" destination="ROd-Sm-RbI" id="fFo-zE-Dgg"/>
+                        <segue destination="2xQ-Qz-ViR" kind="show" identifier="showDetailSegue" id="OaN-EZ-DZ1"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6KS-pZ-vNS" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="856.79999999999995" y="-574.8768472906404"/>
+        </scene>
+        <!--Detail View Controller-->
+        <scene sceneID="q8h-6j-G3H">
+            <objects>
+                <viewController storyboardIdentifier="DetailViewController" id="2xQ-Qz-ViR" customClass="DetailViewController" customModule="timeCapsule" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Qjg-lW-ei4">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="iO6-6k-Dj1">
+                                <rect key="frame" x="0.0" y="88" width="375" height="330"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="LIK-2r-iKM">
+                                <rect key="frame" x="16" y="426" width="343" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="Kp9-pt-TGa"/>
+                    </view>
+                    <connections>
+                        <outlet property="reminderMemo" destination="LIK-2r-iKM" id="qAm-A0-mwL"/>
+                        <outlet property="reminderPic" destination="iO6-6k-Dj1" id="th5-n8-HIS"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="8M8-SC-xLR" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1612" y="-575.61576354679801"/>
         </scene>
         <!--Photo View Controller-->
         <scene sceneID="F6Z-sd-2Fd">
